crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI025_PYI025_3.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI025_3.pyi:6:36: PYI025 (unaliased-collections-abc-set-import) [*] Use `from collections.abc import Set as AbstractSet` to avoid confusion with the `set` builtin
  |
4 | """
5 |
6 | from collections.abc import Set as Set  # PYI025 triggered but fix is not marked as safe
  |                                    ^^^ PYI025 (unaliased-collections-abc-set-import)
  |
  = help: Alias `Set` to `AbstractSet`

ℹ Unsafe fix
3 3 | through usage of a "redundant" `import Set as Set` alias
4 4 | """
5 5 | 
6   |-from collections.abc import Set as Set  # PYI025 triggered but fix is not marked as safe
  6 |+from collections.abc import Set as AbstractSet  # PYI025 triggered but fix is not marked as safe
