crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI032_PYI032.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI032.pyi:6:29: PYI032 (any-eq-ne-annotation) [*] Prefer `object` to `Any` for the second parameter to `__eq__`
  |
5 | class Bad:
6 |     def __eq__(self, other: Any) -> bool: ...  # PYI032
  |                             ^^^ PYI032 (any-eq-ne-annotation)
7 |     def __ne__(self, other: typing.Any) -> typing.Any: ...  # PYI032
  |
  = help: Replace with `object`

ℹ Safe fix
3 3 | 
4 4 | 
5 5 | class Bad:
6   |-    def __eq__(self, other: Any) -> bool: ...  # PYI032
  6 |+    def __eq__(self, other: object) -> bool: ...  # PYI032
7 7 |     def __ne__(self, other: typing.Any) -> typing.Any: ...  # PYI032
8 8 | 
9 9 | 

PYI032.pyi:7:29: PYI032 (any-eq-ne-annotation) [*] Prefer `object` to `Any` for the second parameter to `__ne__`
  |
5 | class Bad:
6 |     def __eq__(self, other: Any) -> bool: ...  # PYI032
7 |     def __ne__(self, other: typing.Any) -> typing.Any: ...  # PYI032
  |                             ^^^^^^^^^^ PYI032 (any-eq-ne-annotation)
  |
  = help: Replace with `object`

ℹ Safe fix
4 4 | 
5 5 | class Bad:
6 6 |     def __eq__(self, other: Any) -> bool: ...  # PYI032
7   |-    def __ne__(self, other: typing.Any) -> typing.Any: ...  # PYI032
  7 |+    def __ne__(self, other: object) -> typing.Any: ...  # PYI032
8 8 | 
9 9 | 
10 10 | class Good:

PYI032.pyi:26:28: PYI032 (any-eq-ne-annotation) [*] Prefer `object` to `Any` for the second parameter to `__eq__`
   |
25 | class BadStringized:
26 |    def __eq__(self, other: "Any") -> bool: ...  # PYI032
   |                            ^^^^^ PYI032 (any-eq-ne-annotation)
27 |    def __ne__(self, other: "Any") -> bool: ...  # PYI032
   |
   = help: Replace with `object`

ℹ Safe fix
23 23 |   def __ne__(self) -> bool: ...
24 24 | 
25 25 | class BadStringized:
26    |-   def __eq__(self, other: "Any") -> bool: ...  # PYI032
   26 |+   def __eq__(self, other: object) -> bool: ...  # PYI032
27 27 |    def __ne__(self, other: "Any") -> bool: ...  # PYI032

PYI032.pyi:27:28: PYI032 (any-eq-ne-annotation) [*] Prefer `object` to `Any` for the second parameter to `__ne__`
   |
25 | class BadStringized:
26 |    def __eq__(self, other: "Any") -> bool: ...  # PYI032
27 |    def __ne__(self, other: "Any") -> bool: ...  # PYI032
   |                            ^^^^^ PYI032 (any-eq-ne-annotation)
   |
   = help: Replace with `object`

ℹ Safe fix
24 24 | 
25 25 | class BadStringized:
26 26 |    def __eq__(self, other: "Any") -> bool: ...  # PYI032
27    |-   def __ne__(self, other: "Any") -> bool: ...  # PYI032
   27 |+   def __ne__(self, other: object) -> bool: ...  # PYI032
